--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,36 @@
-# volumes:
+volumes:
+  postgres-data:
+    external: true
+  pg-admin:
+    external: true
+
 services:
+  postgres:
+    image: postgres:14.5-bullseye
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: admin
+      POSTGRES_DB: meme-team-supreme
+    ports:
+      - 15432:5432
+
+  pg-admin:
+    image: dpage/pgadmin4
+    volumes:
+      - pg-admin:/var/lib/pgadmin
+    ports:
+      - 8080:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@memeteamsupreme.com
+      PGADMIN_DEFAULT_PASSWORD: password
+      PGADMIN_DISABLE_POSTFIX: 1
+
   fastapi:
     environment:
       CORS_HOST: http://localhost:3000
+      DATABASE_URL: postgresql://admin:secret@postgres/meme-team-supreme
     build:
       context: api
       dockerfile: Dockerfile.dev
@@ -10,6 +38,7 @@ services:
       - 8000:8000
     volumes:
       - ./api:/app
+
 
   ghi:
     image: node:lts-bullseye
