--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
     environment:
       CORS_HOST: http://localhost:3000
       DATABASE_URL: postgresql://admin:secret@postgres/meme-team-supreme
+      WAIT_HOSTS: postgres:5432
     build:
       context: api
       dockerfile: Dockerfile.dev
