--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
 
   fastapi:
     environment:
+      SIGNING_KEY: 94e66e430379916038b7687ed13858a15b6e96086ae014b904aa5e60429a5d53
       CORS_HOST: http://localhost:3000
       DATABASE_URL: postgresql://admin:secret@postgres/meme-team-supreme
       WAIT_HOSTS: postgres:5432
