--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,13 +9,13 @@ COPY main.py main.py
 
 # Copy all of the subdirectories in your service's directory
 # Modify these instructions to do that
-# COPY queries queries
-# COPY routers routers
+COPY queries queries
+COPY routers routers
 
 RUN python -m pip install -r requirements.txt
 
 # !! PORT env var needs to match with exposed port in caprover dashboard
-CMD uvicorn main:app --host 0.0.0.0 --port 80
+# CMD uvicorn main:app --host 0.0.0.0 --port 80
 
 
 # If you're using a relational database and want migrations
