--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,7 +9,7 @@ COPY main.py main.py
 
 # Copy all of the subdirectories in your service's directory
 # Modify these instructions to do that
-# COPY queries queries
+COPY queries queries
 # COPY routers routers
 COPY rooms rooms
 COPY users users
