--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,7 +10,10 @@ COPY main.py main.py
 # Copy all of the subdirectories in your service's directory
 # Modify these instructions to do that
 COPY queries queries
-COPY routers routers
+# COPY routers routers
+COPY rooms rooms
+COPY users users
+COPY preferences preferences
 
 RUN python -m pip install -r requirements.txt
 
