--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ lint-test-job:
     - pip install flake8
     - flake8 api
 
-# Run the unit tests
+# # Run the unit tests
 api-unit-tests-job:
   image: python:3-bullseye
   stage: test
