--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,15 +15,17 @@ lint-test-job:
     - flake8 api
 
 # # Run the unit tests
-# api-unit-tests-job:
-#   image: python:3-bullseye
-#   stage: test
-#   needs:
-#     - lint-test-job
-#   script:
-#     - cd api
-#     - pip install -r requirements.txt
-#     - python -m pytest
+api-unit-tests-job:
+  image: python:3-bullseye
+  stage: test
+  needs:
+    - lint-test-job
+  script:
+    - export SIGNING_KEY="94e66e430379916038b7687ed13858a15b6e96086ae014b904aa5e60429a5d53"
+    - export DATABASE_URL="postgresql://admin:secret@postgres/meme-team-supreme"
+    - cd api
+    - pip install -r requirements.txt
+    - python -m pytest
 
 # Build API Image:
 build-api-image:
