--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,8 +53,9 @@ build-front-end-job:
     # CI/CD variables, that value will override the value here.
     # You need to substitute in your real values for
     # GROUP_NAME, PROJECT_NAME, & WEBSERVICE_NAME below.
-    PUBLIC_URL: https://GROUP_NAME.gitlab.io/PROJECT_NAME/
-    REACT_APP_API_HOST: https://DEPLOYED_API_SERVICE.mod3projects.com
+    PUBLIC_URL: https://meme-team-supreme.gitlab.io/roomie-o/
+    REACT_APP_API_HOST: https://may-7-pt-meme-team-supreme-api.mod3projects.com/
+
   script:
     - cd ghi
     - npm install
